--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -32,12 +32,7 @@ footer {
 .site-footer {
   padding-top: $space-2;
   padding-bottom: $space-2;
-  background: rgba(255, 255, 255, 0.2); /* Glassmorphic background */
-  backdrop-filter: blur(5px); /* Glassmorphic blur effect */
-  -webkit-backdrop-filter: blur(5px); /* Glassmorphic blur effect for Safari */
-  border: 1px solid rgba(255, 255, 255, 0.3); /* Glassmorphic border */
-  // border-radius: 16px; /* Rounded corners */
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Glassmorphic shadow */
+  background: transparent;
   text-align: center;
   margin-top: 0; /* Ensure no top margin */
 }
