--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -89,8 +89,8 @@
     }
 
     .post-summary {
-      color: #374151;
-      text-shadow: 0 1px 3px rgba(255, 255, 255, 0.8);
+      color: #ffffff;
+      text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
     }
 
     .read-more {
@@ -198,13 +198,13 @@
 
 // Summary
 .post-summary {
-  color: #374151;
+  color: #f9fafb;
   font-size: 0.97rem;
   line-height: 1.5;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  text-shadow: 0 1px 2px rgba(255, 255, 255, 0.8);
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   overflow: hidden;
 }
 
