post content update

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -384,7 +384,7 @@
   }
 
   .post-summary {
-    color: #d1d5db;
+    color: #f9fafb;
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
   }
 
@@ -423,7 +423,7 @@
   }
 
   .post-summary {
-    color: #d1d5db;
+    color: #f9fafb;
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
   }
 
