--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -1,7 +1,7 @@
 .pagination {
   font-size: 1rem;
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
-  font-weight: 300;
+  font-family: $heading-font-family;
+  font-weight: 400;
   text-align: center;
   position: relative;
   min-height: 60px;
