--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -11,10 +11,15 @@ pre code {
 pre,
 code {
   font-family: $monospace-font-family;
+  font-feature-settings: "liga" 0, "calt" 0;
+  font-variant-ligatures: none;
 }
 
 code {
   color: #7a7a7a;
+  font-size: 0.9em;
+  font-weight: 500;
+  letter-spacing: 0.02em;
 }
 
 pre {
