--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,12 +1,12 @@
 // Typography
-$base-font-size: 14px !default;
-$bold-font-weight: bold !default;
-$font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
-$line-height: 1.5 !default;
-$heading-font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif !default;
-$heading-font-weight: 900 !default;
+$base-font-size: 16px !default;
+$bold-font-weight: 600 !default;
+$font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif !default;
+$line-height: 1.6 !default;
+$heading-font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif !default;
+$heading-font-weight: 700 !default;
 $heading-line-height: 1.25 !default;
-$monospace-font-family: 'Source Code Pro', Consolas, monospace !default;
+$monospace-font-family: 'JetBrains Mono', 'Fira Code', 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', Consolas, 'Courier New', monospace !default;
 $h1: 2.998rem !default;
 $h2: 1.5rem !default;
 $h3: 1.25rem !default;
@@ -116,7 +116,7 @@ $hljs-chunk: $light-gray;
 $header-border-top: thin solid #f3f3f3;
 $header-color: $dark-gray;
 $header-bg-color: #fafafa;
-$header-font-weight: 300;
+$header-font-weight: 400;
 
 // Nav
 $nav-color: $mid-gray;
@@ -131,5 +131,5 @@ $footer-border-top: thin solid #f3f3f3;
 $footer-padding: $space-3;
 $footer-color: #7a7a7a;
 $footer-bg-color: #fafafa;
-$footer-font-weight: 300;
+$footer-font-weight: 400;
 $footer-font-size: .75rem;
