--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -32,6 +32,21 @@
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.6);
   position: relative;
   overflow: hidden;
+
+  // Pagination arrow styling
+  .pagination-arrow-left,
+  .pagination-arrow-right {
+    transition: transform 0.2s ease;
+    display: inline-block;
+  }
+
+  &:hover .pagination-arrow-left {
+    transform: translateX(-2px);
+  }
+
+  &:hover .pagination-arrow-right {
+    transform: translateX(2px);
+  }
 }
 
 .pagination .disabled {
