--- a/_sass/basscss/_base-buttons.scss
+++ b/_sass/basscss/_base-buttons.scss
@@ -31,7 +31,7 @@ button,
 
 // Button icon styling
 .button .mail-icon {
-  display: inline-block !important;
+  display: inline-block;
   vertical-align: middle;
   transition: transform 0.2s ease;
   margin-right: 8px;
