--- a/css/pixyll.scss
+++ b/css/pixyll.scss
@@ -21,6 +21,7 @@
 @import 'positions';
 @import 'clearfix';
 @import 'code';
+@import 'syntax';
 @import 'forms';
 @import 'typography';
 @import 'header';
